--- a/src/app/topic-list/topic-list.component.css
+++ b/src/app/topic-list/topic-list.component.css
@@ -71,15 +71,15 @@
 	display: none;
 }
 
-.color {
-  border: 2px solid black;
+.color-box {
+  border: 1px solid black;
   height: 16px;
   width: 16px;
   display: inline-block;
 	margin-top: 5px;
 }
 
-.color:hover {
+.color-box:hover {
   cursor: pointer;
   border: 1px solid orangered;
 }
