--- a/src/app/topic-list/topic-list.component.html
+++ b/src/app/topic-list/topic-list.component.html
@@ -16,6 +16,7 @@
       </div>
       Venn Diagram
     </h2>
+    <span class="ui-tip">click to change what you fancy &#8711;</span>    
   </div>
   <!-- topic list section content -->
   <div id="list-view"> <!--class="data container"-->
