commented out broken save as png UI for now

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -7,6 +7,8 @@
   <!-- save diagram svg toolbar -->
   <div class="toolbar">
     <button id="export-svg-button" (click)="exportSvg()">Export SVG</button>
+    <!-- TODO: see why this broke in last download blob refactor 
     <button id="save-png-button" (click)="saveAsPng()">Save as PNG</button>
+    -->
   </div>  
 </main>
