--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,3 +1,8 @@
 <header id="app-header" class="header">
   <h1>{{title}}</h1>
+  <span class="app-tip">(created for 
+    <a href="https://twitter.com/search?q=DataScience"
+      target="_blank" >#dataSci</a> 
+    lulz :)
+  </span>
 </header>
