--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -3,6 +3,7 @@
     xlink="http://www.w3.org/1999/xlink"
     viewBox="0 0 420 420">
     <text x="50%" y="20" text-anchor="middle">{{diagram.name}} Venn Diagram</text>
+    <text x="50%" y="40" text-anchor="middle">[todo]</text>
   </svg>
   <!-- save diagram svg toolbar -->
   <div class="toolbar">
