--- a/src/app/topic-list/topic-list.component.css
+++ b/src/app/topic-list/topic-list.component.css
@@ -71,22 +71,40 @@
 
 /* topic editor container styles */
 .topic-editor {
+	background-color: #fff;
   padding: 5px;
 }
 
-.hidden {
-	display: none;
+.topic-toggles {
+	background-color: #fff;	
+	line-height: 24px;
+	margin: 0px;
+  padding: 5px;
 }
 
+/* stroke/fill color box styles */
 .color-box {
-  border: 1px solid black;
-  height: 16px;
-  width: 16px;
-  display: inline-block;
-	margin-top: 5px;
+	border-radius: 12px;
+	display: inline-block;
+	line-height: normal;	
+  height: 24px;
+  width: 24px;
+	vertical-align: middle;
+}
+
+.stroke-color-box {
+	border: 1px solid black;
 }
 
 .color-box:hover {
   cursor: pointer;
   border: 1px solid orangered;
+}
+
+.label {
+	padding-left: 5px;
+}
+
+.hidden {
+	display: none;
 }
