--- a/src/app/topic-list/topic-list.component.html
+++ b/src/app/topic-list/topic-list.component.html
@@ -26,18 +26,21 @@
         [style.border-color]="topic.strokeColor"
         (click)="editTopic(i)">
         <span [attr.id]="'topic-label-' + i">{{ topic.name }}</span>
+        <!-- TODO: move this to a separate topic-editor UI component -->
         <div class="topic-editor hidden" [attr.id]="'topic-editor-' + i">
           <input placeholder="Enter Topic Name" [attr.id]="'topic-name-' + i" [attr.value]="topic.name">
           <button (click)="showTopicEditor(i, false);" class="green-button">&#10003;</button>
           <button (click)="diagram.removeTopic(i)" class="red-button">&#10007;</button>
         </div>
-        <div class="topic-editor hidden" [attr.id]="'topic-toggles-' + i">
+        <div class="topic-toggles hidden" [attr.id]="'topic-toggles-' + i">
           <button (click)="diagram.moveTopicUp(i)">&uarr;</button>
           <button (click)="diagram.moveTopicDown(i)">&darr;</button>
           <span class="label">stroke:</span>
-          <div class="color-box" [style.border-color]="topic.strokeColor"></div>
+          <div class="color-box stroke-color-box" 
+            [style.border-color]="topic.strokeColor"></div>
           <span class="label">fill:</span>
-          <div class="color-box" [style.background-color]="topic.fillColor"></div>
+          <div class="color-box" 
+            [style.background-color]="topic.fillColor"></div>
         </div>
       </li>
     </ul>
