switched to using single app diagram model instance with Input injection for  child comps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header class="app-header"></app-header>
-<venn-diagram class="main-content"></venn-diagram>
-<topic-list class="side-bar"></topic-list>
+<venn-diagram class="main-content" [diagram]="diagram"></venn-diagram>
+<topic-list class="side-bar" [diagram]="diagram"></topic-list>
 <app-footer class="app-footer"></app-footer>  
