--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header class="app-header"></app-header>
-<venn-diagram class="main-content" [diagram]="diagram"></venn-diagram>
-<topic-list class="side-bar" [diagram]="diagram"></topic-list>
+<venn-diagram class="main-content" 
+  [diagram]="diagram"></venn-diagram>
+<topic-list class="side-bar" 
+  [diagram]="diagram"
+  (onDiagramChange)="onDiagramChange($event)"></topic-list>
 <app-footer class="app-footer"></app-footer>  
