fixed xlink xmlns, set viewBoxt to 540x540, added createdBy svg footer for svg export link to app

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -9,10 +9,18 @@
   </ul>  
   -->
   <svg id="svg" class="svg" xmlns="http://www.w3.org/2000/svg"
-    xlink="http://www.w3.org/1999/xlink"
-    viewBox="0 0 420 420">
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    viewBox="0 0 540 540">
     <text x="50%" y="20" text-anchor="middle">{{diagram.name}} Venn Diagram</text>
     <text x="50%" y="40" text-anchor="middle">[todo]</text>
+
+    <!-- created by app link group -->
+    <g id="created-by-group">
+      <text x="10" y="530" font-size="10">created by: </text>
+      <a xlink:href="https://venn-diagrams.herokuapp.com">
+        <text x="60" y="530" heigt="20" font-size="10">https://venn-diagrams.herokuapp.com</text>
+      </a>
+    </g>
   </svg>
   <!-- save diagram svg toolbar -->
   <div class="toolbar">
