set topic ellipse fill opacity to .6

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -21,6 +21,7 @@
           [attr.rx]="topic.rx" 
           [attr.ry]="topic.ry"
           [style.fill]="topic.fillColor"
+          [style.fill-opacity]=".6"
           [style.stroke]="topic.strokeColor"
           [style.stroke-width]="2">
         </ellipse>
