--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -3,14 +3,13 @@
     xmlns:xlink="http://www.w3.org/1999/xlink"
     viewBox="0 0 540 540">
     <text x="50%" y="20" text-anchor="middle">{{diagram.name}} Venn Diagram</text>
-    <!-- main diagram circle -->
-    <g id="main-circle"> <!--transform="translate(250,250)"-->
-      <circle cx="50%" cy="50%" r="60"
-        style="fill: #ffffb3; stroke: black; stroke-width: 2;"></circle>
-      <text x="50%" y="50%" text-anchor="middle">{{diagram.name}}</text>
-    </g>
     <!-- segments svg -->
     <g id="segments-group">
+      <!-- main diagram circle
+      <circle cx="50%" cy="50%" r="60"
+        style="fill: #ffffb3; stroke: black; stroke-width: 2;">
+      </circle>
+      -->
       <g *ngFor="let topic of diagram.topics; let i=index;" 
         [attr.data-index]="i"
         [attr.id]="'segment-group-' + i">
@@ -25,6 +24,16 @@
           [style.stroke]="topic.strokeColor"
           [style.stroke-width]="2">
         </ellipse>
+      </g>
+    </g>  
+    <!-- segment labels svg -->
+    <g id="segment-labels-group">
+      <!-- main diagram topic label -->
+      <text x="50%" y="50%" font-size="16"
+        text-anchor="middle">{{diagram.name}}</text>
+      <g *ngFor="let topic of diagram.topics; let i=index;" 
+        [attr.data-index]="i"
+        [attr.id]="'segment-label-group-' + i">
         <text 
           [attr.id]="'segment-label-' + i"
           [attr.x]="topic.cx" 
