set fill color box opacity to .6 to match svg display

--- a/src/app/topic-list/topic-list.component.html
+++ b/src/app/topic-list/topic-list.component.html
@@ -40,7 +40,8 @@
             [style.border-color]="topic.strokeColor"></div>
           <span class="label">fill:</span>
           <div class="color-box" 
-            [style.background-color]="topic.fillColor"></div>
+            [style.background-color]="topic.fillColor"
+            [style.opacity]=".6"></div>
         </div>
       </li>
     </ul>
