--- a/src/app/app-footer/app-footer.component.html
+++ b/src/app/app-footer/app-footer.component.html
@@ -1,6 +1,6 @@
 <footer id="app-footer" class="footer">
   <a href="https://github.com/RandomFractals/venn-diagram-generator" 
     target="_blank" class="link"
-	title="&copy;Random Fractals Inc. 2016 sentimental.io github">venn-diagram-generator</a>
+	title="Venn Diagram Generator on github">venn-diagram-generator</a>
   <span>&copy;Random Fractals Inc. | 2017</span>
 </footer>
