added diagram toolbar css + set diagram view height to 600 to fix toolbar cutoff on resize

--- a/src/app/venn-diagram/venn-diagram.component.css
+++ b/src/app/venn-diagram/venn-diagram.component.css
@@ -1,10 +1,15 @@
 
 /* Venn Diagram view styles */
 .diagram {
-  height: 480px;
   padding: 10px;
 }
 
 .svg {
   border: 1px solid #999;
+}
+
+/* toolbar/button styles */
+.toolbar {
+	background-color: #eee;
+  text-align: right;
 }
