added random circles and ellipses layout gen code

--- a/src/app/venn-diagram/venn-diagram.component.html
+++ b/src/app/venn-diagram/venn-diagram.component.html
@@ -66,9 +66,8 @@
     <div class="toolbar-left">
       <button class="symbol-button" (click)="changeLayout('circles')">&#9763;</button><!--biohazard sign-->
       <button class="symbol-button" (click)="changeLayout('ellipses')">&#9883;</button><!--atom-->
-      <!-- todo: random circles and ellipses layout just for fun
+      <!-- random circles and ellipses layout just for fun -->
       <button class="symbol-button" (click)="changeLayout('random')">&#9760;</button>
-      -->
     </div>
     <!-- save diagram svg toolbar -->    
     <div class="toolbar-right">
